# pokerbot-api

./: .gitignore  .replit  APP_GUIDE.md  AUTHENTIC_REQUIREMENTS.txt  COMPLETE_USER_GUIDE.md  COMPREHENSIVE_FIX.py  LOCAL_SETUP_GUIDE.md  MULTI_MONITOR_SETUP.md  POKER_BOT_DETECTION_EXPLAINED.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_READY_SYSTEM.py  README.md  README_WINDOWS.md  README_WINDOWS_SETUP.md  START_APP.md  SYSTEM_STATUS_REPORT.md  TEMPLATE_GENERATION_GUIDE.md  TESTING_GUIDE.md  TEXASSOLVER_INTEGRATION_REALITY_CHECK.md  TRANSPARENT_REASONING_ENGINE.md  WINDOWS_DEPLOYMENT_READY.md  WINDOWS_QUICK_START.bat  WINDOWS_SCREENSHOT_FIX.md  WINDOWS_SETUP.md  WINDOWS_SETUP_OPTIMIZED.py  acr_auto_calibration_results.json  acr_calibration_standalone.py  acr_complete_calibrator.py  acr_intelligent_calibration_ui.html  acr_visual_calibrator.py  advanced_scaling_strategy.py  advice_display.html  advice_display_enhanced.html  bootstrap_sample.py  calibration_interface.html  challenging_scenario_tests.py  cleanup_fallback_scenarios.py  comprehensive_debug.py  comprehensive_poker_tests.py  comprehensive_test_runner.py  (+73 more)
app/: __init__.py  call_analyze.bat  config.py  payload-min.json  payload-real.json  payload.json  payload_pre.json  test_body.json  test_request.bat
attached_assets/: Pasted--Quick-Start-Poker-Advisory-System-Starting-1755604407618_1755604407618.txt  Pasted--venv-C-Users-gameb-Downloads-PokerBrain-python-m-uvicorn-app-api-main-app-reload-32mINFO-0-1755599700024_1755599700025.txt  Pasted-2025-08-17-20-32-42-523-app-api-auto-advisory-endpoints-INFO-Active-buttons-detected-4-but-1755477332397_1755477332397.txt  Pasted-2025-08-17-22-08-51-248-app-api-auto-advisory-endpoints-INFO-Screenshot-captured-2160-3840--1755483001775_1755483001775.txt  Pasted-Building-wheels-for-collected-packages-open-spiel-Building-wheel-for-open-spiel-pyproject-toml--1755601051207_1755601051208.txt  Pasted-C-Users-gameb-Downloads-PokerBrain-python-start-app-py-Poker-Advisory-App-Starter--1755460739021_1755460739021.txt  Pasted-C-Users-gameb-Downloads-PokerBrain-python-start-app-py-Poker-Advisory-App-Starter--1755462053691_1755462053692.txt  Pasted-Goal-Create-a-Replit-ready-Python-3-11-project-that-hosts-an-advisory-API-using-the-decision-logic--1755302060759_1755302060760.txt  Pasted-Great-Here-s-the-final-hand-off-package-for-Replit-to-finish-and-for-you-to-run-on-Windows-It-incl-1755607450805_1755607450806.txt  Pasted-INFO-app-training-neural-trainer-Loaded-5-templates-ACR-Card-Template-Extractor--1755420127318_1755420127318.txt  Pasted-Replace-screen-capture-with-window-bound-MSS-stable-fast-Create-PokerBrain-app-scraper-win-capt-1755606354891_1755606354891.txt  Pasted-Verdict-Nice-progress-MSS-capture-field-specific-OCR-debug-bundle-are-the-big-wins-The-parts--1755606859638_1755606859638.txt  acr_calibration_results_1755311604624.json  acr_calibration_results_1755311854474.json  acr_complete_calibration_1755314508515.json  user_corrections_1755481915035.jsonl
config/: acr_runtime.json
docs/: TROUBLESHOOTING_MATRIX.md  WINDOWS_TEST_PLAN.md
old_testing/: create_test_template.py  extract_acr_templates.py  test_card_reading.py  test_dual_recognition.py
(+143 files in other folders)
