[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PokerBrain"
version = "0.1.0"
description = "Poker advisory system"
requires-python = ">=3.11"

# Core runtime deps (Windows-friendly; open-spiel removed from here)
dependencies = [
    "fastapi>=0.116.1",
    "hnswlib>=0.8.0",
    "imagehash>=4.3.2",
    "joblib>=1.5.1",
    "mss>=10.1.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
# ACR scraper / Windows capture & OCR
scraper = [
  "mss",
  "opencv-python",
  "pytesseract",
  "easyocr",
  "pywin32; platform_system == 'Windows'"
]

# Optional RL/research bits; install on Linux/mac only:
#   pip install -e .[rl]
rl = [
  "open-spiel>=1.6; platform_system != 'Windows'"
]

[tool.setuptools.packages.find]
# Package only the app/* tree (matches your layout)
include = ["app*"]
exclude = [
  "tests*",
  "attached_assets*",
  "stable_download*",
  "texassolver_*",
  "texassolver*",
  "training_data*",
  "config*"
]

[tool.setuptools.package-data]
# Include non-Python runtime files under app/
app = [
  "**/*.json", "**/*.yml", "**/*.yaml",
  "**/*.txt", "**/*.png", "**/*.jpg", "**/*.ttf"
]

# If you use uv resolver/index settings, you can append your existing [tool.uv.*]
# blocks below; they won't affect setuptools packaging.
